Resolve mobile dropdown-menu z-index issue (closes GH-2606)

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1494,7 +1494,7 @@ table.integrations {
     padding-bottom: 3px;
     max-width: 250px;
     top: 30px;
-    z-index: 100;
+    z-index: 1000;
     font-size: 13px;
 
     .form-control {
